tests/neg/override-inner-class.scala
class C:
  type T >: String <: Any

class D extends C:
  class T  // error
